# random-quote

./: .gitignore  LICENSE  README.md  pyproject.toml  random_quote.py  starter-quotes.txt
src/random_quote/: random_quote.py
